syntax = "proto3";

option java_multiple_files = true;

option java_package = "com.example.shared";

option java_outer_classname = "WorldMapProto";

service WorldMap {
    rpc Initialize (InitializeRequest) returns (InitializeResponse);
}

message InitializeRequest {
    string name = 1;
}

message InitializeResponse {
    GrpcWorldMap worldMap = 1;
}

message GrpcWorldMap {
    string id = 1;
    int32 width = 2;
    int32 height = 3;
    string tilePlacement = 4;
    repeated GrpcTile tiles = 5;
}

message GrpcTile {
    string name = 1;
    string base64image = 2;
    bool collision = 3;
}
